apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__habits__render_habit_collection_json_multiple@json.snap
---
source: lorvex-cli/src/render/snapshots.rs
expression: out
---
{
  "action": "query.habits.collection",
  "db_path": "/tmp/lorvex.db",
  "habits": [
    {
      "completions_today": 1,
      "frequency_type": "daily",
      "icon": "book",
      "id": "habit-alpha",
      "name": "Read",
      "target_count": 1
    },
    {
      "completions_today": 1,
      "frequency_type": "daily",
      "icon": null,
      "id": "habit-bravo",
      "name": "Push-ups",
      "target_count": 3
    },
    {
      "completions_today": 0,
      "frequency_type": "weekly",
      "icon": "lotus",
      "id": "habit-charlie",
      "name": "Meditate",
      "target_count": 5
    }
  ],
  "today": "2026-04-10"
}
