apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__habits__render_habit_collection_text_empty.snap
---
source: lorvex-cli/src/render/snapshots/habits.rs
expression: out
---
Lorvex Habits (2026-04-10)
DB: /tmp/lorvex.db
  ↳ No habits yet — create one with `lorvex habit create "<title>" --cadence daily`.
