apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__habits__render_habit_complete_result_json@json.snap
---
source: lorvex-cli/src/render/snapshots.rs
expression: out
---
{
  "action": "mutation.habits.complete",
  "completed_date": "2026-04-10",
  "db_path": "/tmp/lorvex.db",
  "habit_id": "habit-alpha",
  "habit_name": "Read",
  "note": "Finished chapter 1",
  "value": 1
}
