apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__habits__render_habit_complete_result_text.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
COMPLETE habit habit-alpha
Name: Read
Date: 2026-04-10
Value: 1
DB: /tmp/lorvex.db
