apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__habits__render_habit_stats_json@json.snap
---
source: lorvex-cli/src/render/snapshots.rs
expression: out
---
{
  "action": "query.habits.stats",
  "completions_period": 28,
  "completions_today": 1,
  "db_path": "/tmp/lorvex.db",
  "habit_id": "habit-alpha",
  "habit_name": "Read",
  "period_days": 30,
  "total_completions": 120
}
