apps/tauri/lorvex-cli/src/render/snapshots/lorvex__render__snapshots__habits__render_habit_stats_text.snap
---
source: lorvex-cli/src/render.rs
expression: out
---
Lorvex Habit Stats
DB: /tmp/lorvex.db
ID: habit-alpha
Name: Read
Total completions: 120
Today: 1
Last 30 days: 28
